--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
+title: DAWLAB.ME
+subtitle: 
 description:
-author: John Doe
+author: Dawid Łabno
 language:
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
-root: /
+url: http://dawlab.github.io
+root: /dawlab.me
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
