--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
     "npm-git-install": "^0.3.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
+  },
+"scripts": {
+      "deploy": "gh-pages -d public/"
   }
 }
