--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://dawlab.github.io
-root: /dawlab.me
+url: http://dawlabme.github.io
+root: /dawlabme
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
