--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": ""
+    "version": "3.7.1"
   },
   "dependencies": {
     "hexo": "^3.2.0",
@@ -20,7 +20,7 @@
   "devDependencies": {
     "gh-pages": "^1.1.0"
   },
-"scripts": {
-      "deploy": "gh-pages -d public/"
+  "scripts": {
+    "deploy": "gh-pages -d public/"
   }
 }
